--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 <div class="contain">
     <div class="products">
         <div class="gallery">
-            <img src="resources/men/air-jordan-Legacy/image1.png" id="productImg" alt="">
+            <img src="resources/logo.png" id="productImg">
             <div class="controls">
                 <span class="btn active"></span>
                 <span class="btn"></span>
@@ -429,8 +429,8 @@
             </div>
         </div>
         <div class="detail">
-            <h1 id="names" class="name">Air-Jordan-2</h1>
-            <h2 id="prices">₹18999</h2>
+            <h1 id="names" class="name">Shoemart</h1>
+            <h2 id="prices">₹18,999</h2>
             <h3>30% OFF</h3>
             <p id="para">Crafted for quality and designed for comfort, our short sleeve tees for men boast a timeless crewneck design that never goes out of style. Wear as a bottom layer or as your only layer – this wardrobe essential is just that versatile.</p>
             <form id="select">
@@ -460,7 +460,7 @@
 
                 <div class="quantity-select">
                     <p id="para">Quantity</p>
-                    <input type="number" value="1" min="0">
+                    <input type="number" value="1" max="10">
                 </div>
 
                 <button id="buy">Buy Now</button>
