--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
                 </form>
             </nav>
         </div>
-        <h1 class="details">Shoemart <br><span>Collections</span></h1>
-        <p class="detailed">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quiet eligendi maiores illo neque, quidem magnam amet explicabo vero animi?</p>
+        <h1 class="details">Shoemart <br> <span>Collections</span></h1>
+        <p class="detailed">This is a large retail chain that started as a shoe store and has since expanded to include department stores, supermarkets, and malls. It's known for its wide variety of products and affordable prices.</p>
         <img src="resources/background.jpg">
-        <button class="last">SHOP NOW <i class="fa-solid fa-chevron-right"></i></button>
     </div>
 
  <!-- --------------------------------header------------------------ -->
