--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
         <div class="container">
             <nav>
                 <h1>Shoe<span>mart</span></h1>
-                <ul>
+                <ul id="sidemenu">
                     <li><a href="#new-featured">New Arrivals</a></li>
                     <li><a href="#men">Men</a></li>
                     <li><a href="#women">Women</a></li>
                     <li><a href="#kids">Kids</a></li>
                     <li><a href="#sale">Sale</a></li>
+                    <i class="fa-solid fa-xmark"onclick="closemenu()"></i>
                 </ul>
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+
                 <form>
                     <div class="search">
                         <input type="text" placeholder="Search...">
