--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#sale">Sale</a></li>
                     <i class="fa-solid fa-xmark"onclick="closemenu()"></i>
                 </ul>
-                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+                <i class="fa-solid fa-bars" id="sidemenu" onclick="openmenu()"></i>
 
                 <form>
                     <div class="search">
