--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <input type="text" placeholder="Search...">
                         <button><i class="fa-solid fa-magnifying-glass"></i></button>
                     </div>
-                    <button><i class="fa-solid fa-user"></i></button>
-                    <button><i class="fa-solid fa-cart-shopping cart"></i></button>
+                    <button class="butn"><i class="fa-solid fa-user"></i></button>
+                    <button class="butn"><i class="fa-solid fa-cart-shopping cart"></i></button>
                 </form>
             </nav>
         </div>
@@ -466,7 +466,6 @@
                 </div>
 
                 <button id="buy">Buy Now</button>
-
             </form>
         </div>
     </div>
